# sprintapi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/hello-world/: main.py
examples/with-di/: main.py
examples/with-di/demo/: config.py  controller.py  manager.py
src/sprintapi/: __init__.py  config.py  controller.py  error.py  logging.py  server.py  service.py
src/sprintapi/middleware/: __init__.py  cors.py  error_handler.py
src/sprintapi/utility/: di.py  type_registry.py
