[project]
name = "sprintapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn"
]
authors = [
    {name = "Lingqiao Zhao", email = "forever.3g@hotmail.com"}
]

[tool.setuptools]
package-data = { "gw_luna" = [
    "static/redoc/*",
    "static/swagger-ui/*"
] }
