[project]
name = "sprintapi"
version = "0.1.1"
description = "A lightweight FastAPI-based framework that can be used like Spring Boot, with built-in dependency injection and lifecycle management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12"
]
authors = [
    {name = "Lingqiao Zhao", email = "forever.3g@hotmail.com"},
    {name = "Jiaying Zhong", email = "zhongjiaying020@gmail.com"}
]

[tool.setuptools]
package-data = { "gw_luna" = [
    "static/redoc/*",
    "static/swagger-ui/*"
] }

[project.urls]
Homepage = "https://github.com/s-zhao-3g/sprintapi"
Repository = "https://github.com/s-zhao-3g/sprintapi"
